--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+	font-family: Roboto;
+	src: url("assets/fonts/Roboto-Regular.ttf");
+}
 * {
 	box-sizing: border-box;
+}
+body{
+	font-family: 'Roboto';
 }
