--- a/style.css
+++ b/style.css
@@ -2,9 +2,15 @@
 	font-family: Roboto;
 	src: url("assets/fonts/Roboto-Regular.ttf");
 }
+
 * {
 	box-sizing: border-box;
 }
+
+html {
+  scroll-behavior: smooth; 
+}
+
 body{
 	display: flex;
 	min-height: 100vh;
@@ -12,17 +18,22 @@ body{
 	padding: 0;
 	flex-direction: column;
 	justify-content: space-between;
-	font-family: 'Roboto';
-	border: 1px solid red;
-}
-
-.footer{
-	border: 2px solid red;
+	font-family: 'Roboto', sans-serif;
+	font-size: 19px;
+	font-weight: 400;
+	line-height: 1.5;
 }
 
 .container {
 	max-width: 1440px;
+	min-height: 70px;
 	margin: 0 auto;
+}
+
+.container-main {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .nav-list {
@@ -43,13 +54,167 @@ body{
 }
 
 .nav-item {
-	transition: transform 1s ease;
+	transition: transform 0.3s ease;
 }
 
 .nav-item:hover {
-	transform: scale(1.2) skew(-7deg);
+	transform: scale(1.2);
 }
 
 .header {
 	background-color: rgb(76, 96, 187);
+}
+
+.section {
+	width: calc(50% - 20px);
+	padding: 10px;
+	padding-bottom: 35px;
+	border-bottom: 1px solid #672f2f;
+}
+
+.section-profile {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	padding: 50px 30px 35px;
+	border-bottom: 12px solid rgb(216, 198, 198);
+}
+
+
+.profile-logo {
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+	border-radius: 50%;
+	box-shadow: 0 1px 4px rgb(0 0 0 / 60%);
+	transition: .5s;
+}
+
+.profile-logo:hover {
+	filter: grayscale(0.2) brightness(1.05);
+}
+
+.profile-title {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.profile-main-title {
+	position: relative;
+	padding: 0;
+	margin-bottom: 20px;
+	color: #4d2323;
+	font-size: 32px;
+	font-weight: 300;
+	letter-spacing: 10px;
+	line-height: 50px;
+	word-spacing: 3px;
+}
+
+.profile-main-title::after {
+	content: "";
+	position: absolute;
+	bottom: -19px;
+	left: 50%;
+	margin-left: -70px;
+	width: 140px;
+	height: 2px;
+	background-color: #829985;
+}
+
+.profile-subtitle {
+	margin-top: 20px;
+	color: #5c5c5c;
+	line-height: 50px;
+	font-weight: 300;
+	letter-spacing: 2px;
+}
+
+.section-title {
+	margin-bottom: 20px;
+	font-size: 20px;
+	font-weight: 400;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	color: #829985;
+}
+
+.section-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.section-item a {
+	text-decoration: none;
+	color: #829985;
+	transition: color 1s;
+}
+
+.contacts-item a:hover {
+	color: black;
+}
+
+.contacts-item:nth-child(1)::before {
+	background-image: url(./assets/img/location.svg);
+}
+
+.contacts-item:nth-child(2)::before {
+	background-image: url(./assets/img/tlg.png);
+	top: 4px;
+	width: 24px;
+	height: 24px;
+}
+
+.contacts-item:nth-child(3)::before {
+	background-image: url(./assets/img/Email.png);
+	top: 5px;
+}
+
+.contacts-item:nth-child(4)::before {
+	background-image: url(./assets/img/gitlogo.png);
+}
+
+.contacts-item:nth-child(5)::before {
+	background-image: url(./assets/img/discord.png);
+}
+
+.section-item {
+  position: relative;
+  padding-left: 30px;
+}
+
+.items::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0px;
+  width: 10px;
+  height: 10px; 
+  border: 1px solid #829985;
+  border-radius: 50%;
+}
+
+.contacts-item::before {
+	content: "";
+	position: absolute;
+	top: 1px;
+	left: 0px;
+	width: 24px;
+	height: 24px;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+.section-language {
+	border-bottom: 0;
+}
+
+.footer {
+	background-color: rgb(76, 96, 187);
+	padding: 18px;
 }
