--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body{
 	color: white;
 }
 
-.nav-item{
+.nav-item {
 	transition: transform 0.3s ease;
 }
 
@@ -234,3 +234,98 @@ body{
 	background-repeat: no-repeat;
 }
 
+.toggle {
+	display: none;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 40px;
+	height: 40px;
+	margin-top: 5px;
+	margin-left: auto;
+	cursor: pointer;
+	user-select: none;
+	z-index: 15;
+}
+
+.toggle div {
+	width: 90%;
+	height: 2px;
+	background: #fff;
+	margin: 3px 0;
+	z-index: 3;
+	transition: all 0.3s ease 0s;
+}
+
+.toggle {
+	display: none;
+}
+
+.toggle.active .line1 {
+	transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle.active .line2 {
+	opacity: 0;
+}
+
+.toggle.active .line3 {
+	transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@media (max-width: 1440px) {
+	.container {
+		padding: 0 20px;
+	}
+}
+
+@media (max-width: 943px) {
+	.section {
+		width: 100%;
+	}
+
+	.section-profile {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.section-education {
+		border-bottom: 1px solid #672f2f;
+	}
+
+	.footer-container {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.nav {
+		display: none;
+	}
+
+	.toggle {
+		display: flex;
+	}
+
+	.nav.active {
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 2;
+		display: flex;
+		width: 100%;
+		height: 100vh;
+		min-height: 525px;
+		flex-direction: column;
+		background-color: rgb(76, 96, 187);
+	}
+	.nav-list.active {
+		position: fixed;
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		width: 100%;
+		height: 100%;
+		flex-direction: column;
+		padding-top: 50px;
+	}
+}
